Fix scrollbar

--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -4,6 +4,7 @@
   --carousel-item-size: 40vw;
   --align-items: left;
   --overflow-x: scroll;
+  --overflow-y: hidden;
 }
 
 @media screen and (max-width: 800px) {
@@ -13,6 +14,7 @@
     --carousel-item-size: 100%;
     --align-items: center;
     --overflow-x: hidden;
+    --overflow-y: scroll;
   }
 
   .inner-carousel {
@@ -25,6 +27,7 @@
 
   .carousel {
     overflow-x: var(--overflow-x);
+    overflow-y: var(--overflow-y);
     justify-content: var(--align-items);
   }
 
@@ -79,6 +82,7 @@
   width: 90%;
   height: 80%;
   overflow-x: var(--overflow-x);
+  overflow-y: var(--overflow-y);
 }
 
 .overlay {
